--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nativewind": "^4.2.1",
     "react": "19.1.1",
     "react-native": "^0.82.1",
+    "react-native-css-transformer": "^2.0.0",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.3",
@@ -34,7 +35,7 @@
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.82.1",
+    "@react-native/babel-preset": "^0.82.1",
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
@@ -43,6 +44,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
     "tailwindcss": "^3.4.18",
