--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "extends": "@react-native/typescript-config",
+  "compilerOptions": {
+    "jsx": "react"
+  },
+  // "extends": "@react-native/typescript-config",
   "include": ["**/*.ts", "**/*.tsx", "App.js"],
   "exclude": ["**/node_modules", "**/Pods"]
 }
